scss/_main.scss
*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  background: linear-gradient($softviolet, $softblue);
  background-repeat: no-repeat;
  overflow: hidden;
  @media (max-width: 790px){
    overflow-y: scroll;
   }
  // font-size: 0.75rem;
}

body {
  font-family: $Kumbh;
  min-height: 100vh;
  // width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  // transition: all 0.5s ease-out;
}

.main {
 width: 58.125rem;
 border-radius: 1.25rem;
 background-color: white;
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 margin: 1.563rem;

 &__image {
   position: relative;
   padding: 3.125rem 0;
   z-index: 50;
   #ill {
    position: absolute;
    top: -18.75rem;
    left: -36.25rem;
    z-index: 40;
    @media (max-width: 790px){
      top: 6.25rem;
      left: -3.125rem;
     }
  }
  &__container{
    overflow: hidden;
    picture {
      margin-left: -5rem;
    }
    @media (max-width: 790px){
      overflow: visible;
     }
  }
  @media (max-width: 790px){
    padding: 0;
    margin: -6.86rem auto 0;
   }
 }
 &__box {
  position: absolute;
  top: 11.875rem;
  left: -5.725rem;
  @media (max-width: 790px){
    display: none;
   }
  &__moved {
  position: absolute;
  top: 11.875rem;
  left: -7.725rem;
  @media (max-width: 790px){
    display: none;
   }
  } 
 }
 @media (max-width: 790px){
  max-width: 28.125rem;
  grid-template-columns: repeat(1, 1fr);
  margin-top: 7.5rem;
 }
}

.question {
  padding: 3.125rem;
  padding-bottom: 1.875rem;
  .title {
    color: $verydarkdesaturatedblue;
    font-size: 1.75rem;
    padding-bottom: 1.25rem;
    font-weight: 700;
  }
  div {
    border-bottom: 1px solid $lightgrayishblue;
  }
  span {
    float: right;
    transition: 0.5s;
  }
  label {
    color: $verydarkgrayishblue;
    display: block;
    cursor: pointer;
    width: 100%;
    text-align: left;
    padding: 0.938rem 0.938rem 0.938rem 0;
    transition: 0.7s;
    &:hover {
      color: $softred;
    }
  }
  .answer {
    overflow: hidden;
    opacity: 0;
    height: 0;
    padding: 0.313rem 0;
    color: $darkgrayishblue;
    font-size: 0.875rem;
    transition: all 0.7s;
  }
  input {
    display: none;
    &:checked ~ .answer {
      height: 4rem;
      opacity: 1;
    }
    &:checked ~ label {
      color:$verydarkdesaturatedblue;
      font-weight: 700;
    }
    &:checked ~ label span {
      // transform: rotate3d(1, 2.0, 3.0, 540deg);
      transform: rotate(-540deg);
      transform: scale(2, 0.5s);
      transition: 0.9s;
    }
  }
   
}

.attribution {
  position: absolute;
  display: inline-block;
  align-self: flex-end;
  text-align: center;
  font-size: 11px; 
  // margin-top: 1rem;
  // bottom: 1rem;
  a:link {
    color: $softred;
    background-color: transparent;
    text-decoration: none;
  }
  a:hover {
    color: $lightgrayishblue;
    text-decoration: none;
    transition: 0.5s;
  }
}

